doc/full_html/0.1.2/_sources/index.txt
.. picos documentation master file, created by
   sphinx-quickstart on Thu Mar  1 10:03:01 2012.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

.. |br| raw:: html

   <br />

PICOS: A Python Interface for Conic Optimization Solvers
========================================================

.. _contents:

**News**

 * 08 Dec. 12: **Picos** :ref:`0.1.1 <download>` **Released** |br|
   Major changes:
     * Picos now interfaces GUROBI !
     * You can specify an initial solution to *warm-start* mixed integer optimizers.
     * Minor bugs with quadratic expressions corrected
     * It's possible to return a reference to a constraint added
       with add_constraint()


**PICOS Documentation contents**

Welcome to the documentation of PICOS.
The latest version can be downloaded :ref:`here <download>`,
and can be installed by following :ref:`these instructions <requirements>`.
This documentation contains a :ref:`tutorial <tuto>` and some :ref:`examples <examples>`,
which should already be enough for a quick start with PICOS. To go deeper,
have a look at the :ref:`picos reference <api>`, which provides information
on every function of PICOS.

.. toctree::
   :maxdepth: 2

   intro
   tuto
   examples
   api
   download
   
Indices and tables
==================

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`

